[gd_scene load_steps=3 format=3 uid="uid://c0xujtgddc00l"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_5y6as"]
[ext_resource type="FontFile" uid="uid://bw2to88g567a2" path="res://assets/Madimi_One/MadimiOne-Regular.ttf" id="2_dw4tc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y6as")

[node name="SortModeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 340.0
offset_right = 792.0
offset_bottom = 433.0
theme_override_fonts/font = ExtResource("2_dw4tc")
theme_override_font_sizes/font_size = 64
text = "Sort
"

[node name="CatchModeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 224.0
offset_right = 823.0
offset_bottom = 317.0
theme_override_fonts/font = ExtResource("2_dw4tc")
theme_override_font_sizes/font_size = 64
text = "Catch"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 468.0
offset_right = 853.0
offset_bottom = 561.0
theme_override_fonts/font = ExtResource("2_dw4tc")
theme_override_font_sizes/font_size = 64
text = "Settings
"

[connection signal="pressed" from="SortModeButton" to="." method="_on_sort_mode_button_pressed"]
[connection signal="pressed" from="CatchModeButton" to="." method="_on_catch_mode_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
